# eling-agent

./: .gitignore  CREDITS.library.md  CREDITS.md  LICENSE  README.md  agent.py  config.example.json  mcp_client.py  memory.py  provider.py  pyproject.library.toml  pyproject.toml  skills.py  textsim.py  tui.py  tui_textual.py  workspace_manager.py
docs/: architecture.md  configuration.md  index.md  mcp.md  memory.md  plugins.md
plugins/: __init__.py  eling_integration.py  shell_plugin.py
src/eling/: __init__.py  brain.py  cli.py  compress.py  config.py  decay.py  export.py  fact_memory_provider.py  hermes_plugin.py  hooks.py  mcp_server.py  permissions.py  plugin.yaml  privacy.py  rules.py  snapshot.py  spec_kit.py  verify_on_stop.py
src/eling/adapters/: __init__.py
src/eling/as_brain/: __init__.py  mcp_server.py
src/eling/blackbox/: __init__.py  cli.py  core.py  effectiveness.py  mcp_server.py  score.py  store.py  timeline.py
src/eling/blackbox/adapters/: __init__.py  hermes.py  zero.py
src/eling/continuum/: __init__.py  continuum.sh  mcp_server.py  plot.py  store.py  worktree.py
src/eling/layers/: __init__.py  builtin.py  code.py  code_index.py  embeddings.py  facts.py  hrr.py  kb.py  notion.py  obsidian.py
src/eling/markdownify/: __init__.py  markdownify.sh  mcp_server.py
src/eling/opencode_plugin/: eling-memory.js
src/eling/scripts/: benchmark.py
src/eling/utils/: __init__.py
src/eling/zero_plugin/: SKILL.md  __init__.py  eling-hook.py
src/eling_agent/: __init__.py  cli.py
tests/: test_adapters.py  test_brain.py  test_builtin.py  test_cli.py  test_compress.py  test_config.py  test_continuum.py  test_contradiction.py  test_decay.py  test_export.py  test_facts.py  test_graph.py  test_hooks.py  test_hrr.py  test_kb.py  test_notion_retrieval.py  test_permissions.py  test_privacy.py  test_schema_packs.py  test_snapshot.py  test_sync.py  test_think.py  test_universal_brain.py  test_verify_on_stop.py
