[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eling-agent"
version = "0.2.0"
description = "Personal auto-learning agent CLI — memory, skills, MCP tools, workspace, and terminal UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "cli", "ai", "mcp", "memory", "terminal"]
authors = [
    {name = "PatrickNoFilter"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "eling>=0.12.0",
    "httpx>=0.27",
    "requests>=2.31.0",
    "rich>=13.0",
]

[project.optional-dependencies]
notion = ["httpx>=0.27"]
hrr = ["numpy>=1.24"]
embeddings = ["sentence-transformers>=3.0"]
markdownify = ["markitdown[pdf]"]
markdownify_all = ["markitdown[all]"]
all = ["eling-agent[hrr,embeddings,notion]"]
dev = [
    "eling-agent[hrr]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eling-agent = "agent:main"
eling-install-opencode = "eling.cli:_run_install_opencode_cli"
eling-install-zero = "eling.cli:_run_install_zero_cli"
eling-install-termux = "eling.cli:_run_install_termux_cli"
eling-continuum = "eling.cli:_run_continuum_cli"
eling-markdownify = "eling.markdownify.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["plugins*"]

[tool.setuptools.package-data]
eling = ["opencode_plugin/*", "zero_plugin/*", "blackbox/*", "blackbox/adapters/*", "markdownify/*", "markdownify/markdownify.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.urls]
Homepage = "https://github.com/PatrickNoFilter/eling-agent"
Repository = "https://github.com/PatrickNoFilter/eling-agent"
Documentation = "https://github.com/PatrickNoFilter/eling-agent#readme"
